--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        
+    </main>
     <footer></footer>
     <script src="script.js"></script>
     <script src="machine.js"></script>
