Adicionado responsividade ao header

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <h4>WebDev</h4>
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#services">Serviços</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
@@ -30,8 +30,8 @@
         </nav>
         <div class="mobile-menu">
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#services">Serviços</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
@@ -62,7 +62,15 @@
         </div>
     </header>
     <main>
-        
+        <section id="about">
+            <h1>Sobre mim</h1>
+            <p>Sou um aficionado por tecnologia e desenvolvimento web, atuo na area de front-end ux/ui. Estou sempre
+                querendo aprender mais e procuro me aperfeiçoar, busco oportunidade na area. Sou formado em tecnico em
+                informatica pela escola Senai informatica.</p>
+        </section>
+        <section id="services">
+
+        </section>
     </main>
     <footer></footer>
     <script src="script.js"></script>
