Finalizado seção sobre e serviços

--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
                 informatica pela escola Senai informatica.</p>
         </section>
         <section id="services">
-
+            <h1>Serviços</h1>
+            <div class="cards">
+                <div class="card">
+                    <h4>Front-end</h4>
+                    <p>Desenvolvimento de front-end de sites.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
