Finalizado seção skills

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -76,6 +76,55 @@
                     <p>Desenvolvimento de front-end de sites.</p>
                 </div>
             </div>
+        </section>
+        <section id="skills">
+            <h1>Skills</h1>
+            <div class="bean-skills">
+                <ul class="bean-skillset">
+
+                    <li class="skill-bar" style="width:80%; background-color:#F3C128">
+
+                        <span>HTML</span>
+
+                        <span class="skill-percent">80%</span>
+
+                    </li>
+
+                    <li class="skill-bar" style="width:80%; background-color:#FF5353">
+
+                        <span>CSS</span>
+
+                        <span class="skill-percent">80%</span>
+
+                    </li>
+
+                    <li class="skill-bar" style="width:60%; background-color:#1CDCFF">
+
+                        <span>Bootstrap</span>
+
+                        <span class="skill-percent">60%</span>
+
+                    </li>
+
+                    <li class="skill-bar" style="width:50%; background-color:#C799FF">
+
+                        <span>Materialize</span>
+
+                        <span class="skill-percent">50%</span>
+
+                    </li>
+
+                    <li class="skill-bar" style="width:40%; background-color:#7CD14E">
+
+                        <span>Javascript</span>
+
+                        <span class="skill-percent">40%</span>
+
+                    </li>
+
+                </ul>
+            </div>
+            <br><br>
         </section>
     </main>
     <footer></footer>
