--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
             <span class="mobile-menu-icon" onclick="menuShow()">
                 <span class="material-icons">
@@ -33,8 +33,8 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </div>
         <div class="container">
@@ -124,6 +124,29 @@
 
                 </ul>
             </div>
+            <br><br>
+        </section>
+        <section id="projetos">
+            <h1>Projetos</h1>
+            <div class="cards">
+                <div class="card">
+                    <h4>Data Lake</h4>
+                    <span>Participação em projeto de Data-Lake em parceria com UOL DIVEO, como back-end.</span>
+                    <br><br>
+                    <p>Projeto consistiu em uma aplicação web que consome dados de diversas bases de dados e persiste
+                        num
+                        único banco de dados em mongodb para depois extrair esses dados e apresenta-los em forma de
+                        gráficos
+                        para análise posterior pelas equipes técnicas de TI da empresa.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h1>Contato</h1>
+            <p><span class="material-icons">mail</span>&nbsp;<a href="mailto:simoes.marcos@hotmail.com">Marcos Simões Bernardo</a></p>
+            <br>
+            <p><a href="https://drive.google.com/file/d/1JvrEulxpxoX_DQ7FUaHRETPGd81y5Mi9/view" class="cv">Download CV</a></p>
             <br><br>
         </section>
     </main>
