Finalizado seção localização

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#contact">Contato</a></li>
+                <li><a href="#local">Localização</a></li>
             </ul>
             <span class="mobile-menu-icon" onclick="menuShow()">
                 <span class="material-icons">
@@ -35,6 +36,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#contact">Contato</a></li>
+                <li><a href="#local">Localização</a></li>
             </ul>
         </div>
         <div class="container">
@@ -144,10 +146,24 @@
         </section>
         <section id="contact">
             <h1>Contato</h1>
-            <p><span class="material-icons">mail</span>&nbsp;<a href="mailto:simoes.marcos@hotmail.com">Marcos Simões Bernardo</a></p>
+            <p><span class="material-icons">mail</span>&nbsp;<a href="mailto:simoes.marcos@hotmail.com">Marcos Simões
+                    Bernardo</a></p>
             <br>
-            <p><a href="https://drive.google.com/file/d/1JvrEulxpxoX_DQ7FUaHRETPGd81y5Mi9/view" class="cv">Download CV</a></p>
+            <p><a href="https://drive.google.com/file/d/1JvrEulxpxoX_DQ7FUaHRETPGd81y5Mi9/view" class="cv">Download
+                    CV</a></p>
             <br><br>
+        </section>
+        <section id="local">
+            <h1>Localização</h1>
+            <div class="map">
+                <p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.2298975537296!2d-46.634561585576904!3d-23.631936484647913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5afd670776ef%3A0x7aa85faa65911775!2sR.%20Edgard%20Pereira%2C%2072%20-%20Vila%20Guarani%20(Zona%20Sul)%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004312-020!5e0!3m2!1spt-BR!2sbr!4v1657999405363!5m2!1spt-BR!2sbr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </p>
+            </div>
+            <br>
         </section>
     </main>
     <footer></footer>
