--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </section>
         <section id="contact">
             <h1>Contato</h1>
-            <p><span class="material-icons">mail</span>&nbsp;<a href="mailto:simoes.marcos@hotmail.com">Marcos Simões
+            <p><span class="material-icons">mail</span>&nbsp;<a href="mailto:simoes.marcos@hotmail.com" class="mail">Marcos Simões
                     Bernardo</a></p>
             <br>
             <p><a href="https://drive.google.com/file/d/1JvrEulxpxoX_DQ7FUaHRETPGd81y5Mi9/view" class="cv">Download
@@ -166,7 +166,9 @@
             <br>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy - Copyright 2022 Todos os direitos reservados.&nbsp;By&nbsp;<a href="#">Marcos Simões</a></p>
+    </footer>
     <script src="script.js"></script>
     <script src="machine.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
